# rp2040-embassy-demo

./: Cargo.toml  README.md  build.rs  flash.sh  memory.x  wl10k_led_pico zero.html
.cargo/: config.toml
.github/workflows/: firmware.yml
scripts/: build_flash.sh
src/: main.rs
